🚧 Set margin to .global-footer to prevent it from being overlapped by .order-cta

--- a/styles/layouts/_global-footer.scss
+++ b/styles/layouts/_global-footer.scss
@@ -1,6 +1,7 @@
 .global-footer {
   padding-top: 32px;
   padding-bottom: 40px;
+  margin-bottom: $order-cta-height;
   background-color: $background;
 
   &-title {
@@ -9,7 +10,7 @@
 
     .ic-chevron {
       display: inline-block;
-      // inline 요소는 transform 적용 불가하므로
+      // ★ inline 요소는 transform 적용 불가하므로
       font-size: 12px;
       transform: rotate(-90deg);
     }
@@ -46,6 +47,8 @@
   }
 
   @include responsive(D) {
+    margin-bottom: 0;
+
     &-title {
       @include text-style(14);
     }
